--- a/app/src/main/res/layout/fragment_left_drawer.xml
+++ b/app/src/main/res/layout/fragment_left_drawer.xml
@@ -5,19 +5,11 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="LEFT DRAWER"
-        >
-
-    </TextView>
-
-<!--    <ListView-->
-<!--        android:id="@+id/list_nav"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        />-->
+    <ListView
+        android:id="@+id/list_nav"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 
 </FrameLayout>
