beresin menu adapter

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -11,7 +11,8 @@
         android:layout_height="match_parent"
         >
 
-        <GridView
+        <ListView
+            android:id="@+id/list_menu"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             />
