--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -11,10 +11,14 @@
         android:layout_height="match_parent"
         >
 
-        <ListView
+        <GridView
             android:id="@+id/list_menu"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:numColumns="2"
+            android:stretchMode="columnWidth"
+            android:horizontalSpacing="10dp"
+            android:verticalSpacing="10dp"
             />
     </RelativeLayout>
 
