--- a/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
@@ -8,6 +8,7 @@
         android:id="@+id/tv_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="desc"
         />
     <TextView
         android:id="@+id/tv_tag"
