--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_cari"
         android:layout_centerHorizontal="true"
-        android:padding="40dp"
+        android:gravity="center"
+        android:padding="20dp"
         android:textSize="30sp" />
 
 </RelativeLayout>
