--- a/app/src/main/res/layout/fragment_menu_detail.xml
+++ b/app/src/main/res/layout/fragment_menu_detail.xml
@@ -11,16 +11,16 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Deskripsi" />
-
-        <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_langkah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Langkah Memasak" />
+
+<!--        <com.google.android.material.tabs.TabItem-->
+<!--            android:id="@+id/tab_desc"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Deskripsi" />-->
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_resto"
