--- a/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
@@ -14,11 +14,13 @@
         android:id="@+id/tv_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="tag"
         />
     <TextView
         android:id="@+id/tv_bahan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="bahan"
         />
 
 
