--- a/app/src/main/res/layout/fragment_menu_detail.xml
+++ b/app/src/main/res/layout/fragment_menu_detail.xml
@@ -1,38 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    >
 
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_bar"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Deskripsi" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_langkah"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Langkah Memasak" />
+        android:layout_height="match_parent">
 
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_resto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Restoran" />
-    </com.google.android.material.tabs.TabLayout>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Deskripsi" />
 
-</LinearLayout>
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_langkah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Langkah Memasak" />
+
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_resto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Restoran" />
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_btn"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_baseline_edit_24"
+        />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
