--- a/app/src/main/res/layout/fragment_menu_detail_edit.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_edit.xml
@@ -3,105 +3,109 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_nama"
-        android:layout_width="100dp"
+    <EditText
+        android:id="@+id/et_langkah"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Nama : "
-        android:textSize="20sp"
-        />
+        android:layout_below="@id/et_bahan"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="0dp"
+        android:layout_toRightOf="@+id/tv_langkah" />
 
     <EditText
         android:id="@+id/et_nama"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tv_nama"
-        />
-
-    <TextView
-        android:id="@+id/tv_desc"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Deskripsi : "
-        android:layout_below="@id/et_nama"
-        android:textSize="20sp"
-        />
+        android:layout_marginLeft="0dp"
+        android:layout_toRightOf="@+id/tv_nama" />
 
     <EditText
         android:id="@+id/et_desc"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tv_desc"
         android:layout_below="@id/et_nama"
-        />
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_toRightOf="@+id/tv_desc" />
+
+    <TextView
+        android:id="@+id/tv_desc"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_nama"
+        android:layout_marginTop="0dp"
+        android:text="Deskripsi : "
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/tv_tag"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Tag : "
         android:layout_below="@id/et_desc"
-        android:textSize="20sp"
-    />
+        android:layout_marginTop="0dp"
+        android:text="Tag : "
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/et_tag"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tv_tag"
         android:layout_below="@id/et_desc"
-        />
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_toRightOf="@+id/tv_tag" />
 
     <TextView
         android:id="@+id/tv_bahan"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/et_tag"
+        android:layout_marginTop="0dp"
         android:text="Bahan : "
-        android:layout_below="@id/et_tag"
-        android:textSize="20sp"
-        />
-
-    <EditText
-        android:id="@+id/et_bahan"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tv_bahan"
-        android:layout_below="@id/et_tag"
-        />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/tv_langkah"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/et_bahan"
+        android:layout_marginTop="0dp"
         android:text="Langkah : "
-        android:layout_below="@id/et_bahan"
-        android:textSize="20sp"
-        />
-
-    <EditText
-        android:id="@+id/et_langkah"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tv_langkah"
-        android:layout_below="@id/et_bahan"
-        />
-
-    <TextView
-        android:id="@+id/tv_resto"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Tersedia di restoran : "
-        android:layout_below="@id/et_langkah"
-        android:textSize="16sp"
-        />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/et_resto"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/tv_resto"
         android:layout_below="@id/et_langkah"
-        />
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="-2dp"
+        android:layout_toRightOf="@+id/tv_resto" />
+
+    <TextView
+        android:id="@+id/tv_resto"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_langkah"
+        android:layout_marginTop="-2dp"
+        android:text="Tersedia di restoran : "
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/et_bahan"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_tag"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_toRightOf="@+id/tv_bahan" />
+
+    <TextView
+        android:id="@+id/tv_nama"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Nama : "
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn_save"
