--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         android:layout_above="@id/separator"
         android:textSize="30sp"
         android:textAlignment="center"
+        android:textColor="@color/colorBlack"
         />
 
     <View
@@ -30,6 +31,7 @@
         android:text="@string/fragment_home_btn_text"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/separator"
+
         />
 
     <TextView
@@ -40,6 +42,8 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:padding="20dp"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textColor="@color/colorBlack"
+        />
 
 </RelativeLayout>
