--- a/app/src/main/res/layout/fragment_menu_detail.xml
+++ b/app/src/main/res/layout/fragment_menu_detail.xml
@@ -21,20 +21,20 @@
                 android:id="@+id/tab_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Deskripsi" />
+                android:text="@string/tab_desc_text" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/tab_langkah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Langkah Memasak" />
+                android:text="@string/tab_langkah_text" />
 
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/tab_resto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Restoran" />
+                android:text="@string/tab_resto_text" />
         </com.google.android.material.tabs.TabLayout>
 
         <androidx.viewpager.widget.ViewPager
