--- a/app/src/main/res/layout/fragment_menu_detail_resto.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_resto.xml
@@ -5,10 +5,20 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_resto_label"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/resto_label_text"
+        android:textSize="25sp"
+        android:textColor="@color/colorBlack"
+        />
+
+    <TextView
         android:id="@+id/tv_resto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="resto"
+        android:textSize="20sp"
+        android:textColor="@color/colorBlack"
         />
 
 
