--- a/app/src/main/res/layout/item_list_nav.xml
+++ b/app/src/main/res/layout/item_list_nav.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:padding="20dp"
+        android:textColor="@color/colorBlack"
         />
 
 </RelativeLayout>
