--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -10,7 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignBottom="@id/sort_spinner"
+            android:layout_toStartOf="@+id/sort_spinner"
+            android:text="@string/sort_option_label"/>
+        <Spinner
+            android:id="@+id/sort_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginVertical="10dp"
+            />
         <GridView
             android:id="@+id/list_menu"
             android:layout_height="match_parent"
@@ -19,6 +33,7 @@
             android:stretchMode="columnWidth"
             android:horizontalSpacing="10dp"
             android:verticalSpacing="10dp"
+            android:layout_below="@+id/sort_spinner"
             />
     </RelativeLayout>
 
