--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000</color>
     <color name="colorRed">#9c0a00</color>
+    <color name="colorOrange">#ff6f00</color>
+
 </resources>
