--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,6 +31,8 @@
         android:text="@string/fragment_home_btn_text"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/separator"
+        android:background="@drawable/rounded_corner"
+        android:textColor="@color/colorWhite"
 
         />
 
