--- a/app/src/main/res/layout/fragment_menu_detail.xml
+++ b/app/src/main/res/layout/fragment_menu_detail.xml
@@ -50,7 +50,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:src="@drawable/ic_baseline_edit_24"
-        android:backgroundTint="@color/colorOrange"
+        android:backgroundTint="@color/colorPrimaryDark"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
