--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#4287f5</color>
+    <color name="colorPrimaryDark">#0062ff</color>
+    <color name="colorAccent">#4287f5</color>
     <color name="colorBlack">#000</color>
     <color name="colorRed">#9c0a00</color>
     <color name="colorOrange">#ff6f00</color>
+    <color name="colorWhite">#FFF</color>
+    <color name="colorBlue">#4287f5</color>
+    <color name="colorLightGray">#f0f0f0</color>
+
+
 
 </resources>
