--- a/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
@@ -1,71 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    >
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_nama"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/colorBlack"
-        android:textStyle="bold"
-        />
+        <TextView
+            android:id="@+id/tv_nama"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:textColor="@color/colorBlack"
+            android:textStyle="bold"
+            />
 
-    <TextView
-        android:id="@+id/tv_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_nama"
-        android:textSize="20sp"
-        android:textColor="@color/colorBlack"
-        android:visibility="gone"
-        />
+        <TextView
+            android:id="@+id/tv_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_nama"
+            android:textSize="20sp"
+            android:textColor="@color/colorBlack"
+            android:visibility="gone"
+            />
 
-    <TextView
-        android:id="@+id/tv_tag_label"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="@string/deskripsi_tag_label_text"
-        android:layout_below="@+id/tv_desc"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorBlack"
-        />
-    <TextView
-        android:id="@+id/tv_tag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tv_tag_label"
-        android:layout_below="@id/tv_desc"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorBlack"
-        />
+        <TextView
+            android:id="@+id/tv_tag_label"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/deskripsi_tag_label_text"
+            android:layout_below="@+id/tv_desc"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/colorBlack"
+            />
+        <TextView
+            android:id="@+id/tv_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_tag_label"
+            android:layout_below="@id/tv_desc"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/colorBlack"
+            />
 
-    <TextView
-        android:id="@+id/tv_bahan_label"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="@string/deskripsi_bahan_label_text"
-        android:layout_below="@+id/tv_tag"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorBlack"
-        />
-    <TextView
-        android:id="@+id/tv_bahan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_tag"
-        android:layout_toEndOf="@id/tv_bahan_label"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/colorBlack"
-        />
-
-
-
-</RelativeLayout>
-
+        <TextView
+            android:id="@+id/tv_bahan_label"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/deskripsi_bahan_label_text"
+            android:layout_below="@+id/tv_tag"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/colorBlack"
+            />
+        <TextView
+            android:id="@+id/tv_bahan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_tag"
+            android:layout_toEndOf="@id/tv_bahan_label"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/colorBlack"
+            />
+    </RelativeLayout>
+</ScrollView>
