--- a/app/src/main/res/layout/fragment_menu_detail_resto.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_resto.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    >
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_resto_label"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="@string/resto_label_text"
-        android:textSize="25sp"
-        android:textColor="@color/colorBlack"
-        />
+        <TextView
+            android:id="@+id/tv_resto_label"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/resto_label_text"
+            android:textSize="25sp"
+            android:textColor="@color/colorBlack"
+            />
 
-    <TextView
-        android:id="@+id/tv_resto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/colorBlack"
-        />
-
-
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_resto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/colorBlack"
+            />
+    </LinearLayout>
+</ScrollView>
