Improving input text field hint.

--- a/app/src/main/res/layout/fragment_menu_detail_edit.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_edit.xml
@@ -85,7 +85,7 @@
             android:layout_marginBottom="30dp"
             android:paddingHorizontal="15dp"
             android:paddingVertical="5dp"
-            android:hint="@string/multi_input_hint"
+            android:hint="@string/tag_input_hint"
             />
 
 
@@ -110,9 +110,8 @@
             android:layout_marginBottom="30dp"
             android:paddingHorizontal="15dp"
             android:paddingVertical="5dp"
-            android:hint="@string/multi_input_hint"
+            android:hint="@string/bahan_input_hint"
             />
-
 
         <TextView
             android:id="@+id/tv_langkah"
@@ -135,7 +134,7 @@
             android:layout_marginBottom="30dp"
             android:paddingHorizontal="15dp"
             android:paddingVertical="5dp"
-            android:hint="@string/multi_input_hint"
+            android:hint="@string/langkah_input_hint"
             />
 
         <TextView
@@ -159,7 +158,7 @@
             android:layout_marginBottom="30dp"
             android:paddingHorizontal="15dp"
             android:paddingVertical="5dp"
-            android:hint="@string/multi_input_hint"
+            android:hint="@string/resto_input_hint"
             />
 
         <LinearLayout
