--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,17 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginHorizontal="25dp"
+    android:layout_marginVertical="10dp"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cooldown"
+        android:text="@string/tv_cooldown_text"
+        android:textSize="25sp"
         android:textColor="@color/colorBlack"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_cooldown_hint"
+        android:layout_marginEnd="25dp"
+        />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        >
+
+        <ImageButton
+            android:id="@+id/btn_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_baseline_remove_circle_24"
+            android:layout_gravity="center"
+            />
+
+        <EditText
+            android:id="@+id/et_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/edit_text_border"
+            android:layout_gravity="center"
+            android:paddingHorizontal="10dp"
+            android:maxLength="5"
+            />
+
+        <ImageButton
+            android:id="@+id/btn_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_baseline_add_circle_24"
+            android:layout_gravity="center"
+            />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/colorBlue"
+        android:layout_marginVertical="40dp"
+        />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_history_text"
+            android:textSize="25sp"
+            android:textColor="@color/colorBlack"
+            />
+
+        <Switch
+            android:id="@+id/switch_search_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:switchMinWidth="56dp"
+            android:layout_marginStart="10dp"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_clear_text"
+        android:background="@drawable/rounded_corner"
+        android:textColor="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorLightGray"
+        android:paddingHorizontal="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        />
+
+
 
 </LinearLayout>
