--- a/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_deskripsi.xml
@@ -42,7 +42,7 @@
             android:id="@+id/tv_tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/tv_tag_label"
+            android:layout_toEndOf="@id/tv_tag_label"
             android:layout_below="@id/tv_desc"
             android:layout_marginTop="20dp"
             android:textSize="20sp"
