--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,8 +20,8 @@
         android:id="@+id/separator"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_above="@id/btn_cari"
         />
 
     <Button
@@ -30,22 +30,46 @@
         android:layout_width="180dp"
         android:text="@string/fragment_home_btn_text"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/separator"
+        android:layout_centerVertical="true"
         android:background="@drawable/rounded_corner"
         android:textColor="@color/colorWhite"
 
         />
-
-    <TextView
-        android:id="@+id/tv_result"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_cari"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:padding="20dp"
-        android:textSize="30sp"
-        android:textColor="@color/colorBlack"
-        />
+        android:layout_marginVertical="20dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_random_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_home_random_label"
+            android:gravity="center"
+            android:padding="10dp"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textSize="25sp"
+            android:textColor="@color/colorBlue"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/tv_click_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_home_tv_click_hint"
+            android:visibility="invisible"
+            />
+    </LinearLayout>
+
 
 </RelativeLayout>
