--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         >
         <TextView
             android:id="@+id/tv_title"
@@ -32,8 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="20dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="30dp"
             android:layout_below="@id/tv_title"
             />
 
@@ -44,6 +45,7 @@
             android:numColumns="2"
             android:stretchMode="columnWidth"
             android:layout_below="@+id/sort_spinner"
+            android:horizontalSpacing="10dp"
             />
     </RelativeLayout>
 
