--- a/app/src/main/res/layout/fragment_menu_detail_langkah.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_langkah.xml
@@ -7,7 +7,9 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        >
         <TextView
             android:id="@+id/tv_langkah"
             android:layout_width="wrap_content"
