--- a/app/src/main/res/layout/fragment_menu_detail_resto.xml
+++ b/app/src/main/res/layout/fragment_menu_detail_resto.xml
@@ -7,7 +7,9 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        >
 
         <TextView
             android:id="@+id/tv_resto_label"
