--- a/app/src/main/res/layout/fragment_cari.xml
+++ b/app/src/main/res/layout/fragment_cari.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="50dp"
+    >
 
     <TextView
         android:id="@+id/tv_cari"
@@ -14,37 +16,61 @@
         android:textColor="@color/colorBlack"
         />
 
-    <EditText
-        android:id="@+id/et_keyword"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/tv_cari"
-        android:background="@drawable/edit_text_border"
-        android:layout_margin="15dp"
-        android:hint="@string/et_keyword_text"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="5dp"
-        android:maxLength="40"
-        />
+    <!--    <EditText-->
+    <!--        android:id="@+id/et_keyword"-->
+    <!--        android:layout_width="250dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_below="@id/tv_cari"-->
+    <!--        android:background="@drawable/edit_text_border"-->
+    <!--        android:layout_margin="15dp"-->
+    <!--        android:hint="@string/et_keyword_text"-->
+    <!--        android:paddingHorizontal="15dp"-->
+    <!--        android:paddingVertical="5dp"-->
+    <!--        android:maxLength="40"-->
+    <!--        />-->
 
-    <Button
-        android:id="@+id/btn_cari"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="@string/cari_btn_text"
-        android:layout_below="@+id/et_keyword"
-        android:layout_alignEnd="@+id/et_keyword"
-        android:background="@drawable/rounded_corner"
-        android:textColor="@color/colorWhite"
-        />
 
     <Spinner
         android:id="@+id/spinner_kategori"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/et_keyword"
-        android:layout_alignStart="@+id/et_keyword"
-        android:layout_marginTop="15dp"
+        android:layout_below="@id/tv_cari"
+        android:layout_alignEnd="@id/wrapper"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="30dp"
         />
+
+    <RelativeLayout
+        android:id="@+id/wrapper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/spinner_kategori"
+        android:layout_centerHorizontal="true"
+        >
+        <SearchView
+            android:id="@+id/search_bar"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_view_border"
+            />
+        <Button
+            android:id="@+id/btn_cari"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/cari_btn_text"
+            android:background="@drawable/right_rounded_corner"
+            android:textColor="@color/colorWhite"
+            android:layout_toEndOf="@+id/search_bar"
+            />
+
+        <ListView
+            android:id="@+id/listview_history"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_cari"
+            android:layout_toStartOf="@id/btn_cari"
+            />
+    </RelativeLayout>
 </RelativeLayout>
