SharedPref and search history cosmetic

--- a/app/src/main/res/layout/fragment_cari.xml
+++ b/app/src/main/res/layout/fragment_cari.xml
@@ -71,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_cari"
             android:layout_toStartOf="@id/btn_cari"
+            android:visibility="gone"
             />
     </RelativeLayout>
 </RelativeLayout>
